REM: CMake functions, ze_append_property and ze_set_property_all_config have been removed in favor of modern CMake build in commands. FIX: Many problems and bugs connected with global compile definitions have been fixed. MOD: MSVC compile flags has been further refined.
svn path=/trunk/; revision=2157

--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -39,10 +39,7 @@ project(ZinekEngine)
 
 ze_set_project_folder("ZEEngine")
 
-set (CMAKE_CXX_SOURCE_FILE_EXTENSIONS ${CMAKE_CXX_SOURCE_FILE_EXTENSIONS} zpp)
-
-ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
-	ZE_ZINEK_ENGINE)
+set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS ZE_ZINEK_ENGINE)
 
 add_subdirectory(ZEAI)
 add_subdirectory(ZECore)
