--- a/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
@@ -35,17 +35,16 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG
-	ZE_DEBUG_D3D10_DEBUG_SHADERS	ZE_DEBUG_D3D10_ENABLE_PERFHUD)
+set_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG ZE_DEBUG_D3D10_DEBUG_SHADERS ZE_DEBUG_D3D10_ENABLE_PERFHUD)
 
 set(ZEBUILD_D3D10_ENABLE_PERFHUD FALSE CACHE BOOL "AT RELEASE CONFIGURATION; Enable PerfHud device in release mode.")
 if(ZEBUILD_D3D10_ENABLE_PERFHUD)
-	ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D10_ENABLE_PERFHUD)
+	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D10_ENABLE_PERFHUD)
 endif()
 
 set(ZEBUILD_D3D10_DEBUG_SHADERS_RELEASE TRUE CACHE BOOL "AT RELEASE CONFIGURATION; Compile shaders with debug mode.")
 if(ZEBUILD_D3D9_DEBUG_SHADERS_RELEASE)
-	ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D10_DEBUG_SHADERS)
+	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D10_DEBUG_SHADERS)
 endif()
 
 ze_add_source(ZED11Module.cpp							Sources)
