CHG: ZECanvas has been revised and improved. ADD: ZECanvas::SaveToFile has been implemented. CHG: ZECanvas has been renamed to ZEGRCanvas and moved to ZEGraphics folder. FIX: Triangle order problem in ZETICrowdDebugDraw has been fixed.
svn path=/trunk/; revision=2167

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -109,6 +109,9 @@ ze_add_source(ZEGRTracer.h					Sources Headers)
 ze_add_source(ZEGRTracerEvent.cpp			Sources)
 ze_add_source(ZEGRTracerEvent.h				Sources Headers)
 
+ze_add_source(ZEGRCanvas.cpp 				Sources)
+ze_add_source(ZEGRCanvas.h 					Sources Headers)
+
 ze_add_library(TARGET ZEGraphics 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
