ADD: Cursor and character input support has been added to ZEInput. MOD: ZEInput system has been revisited and improved. MOD: ZEWindowsInput has been modified to support new input types. FIX: Deadlock problem caused by ZEStateScreen has been fixed. FIX: ZEDEntityWrapper crash has been fixed.
svn path=/trunk/; revision=2181

--- a/Source/ZEEngine/ZEInput/CMakeLists.txt
+++ b/Source/ZEEngine/ZEInput/CMakeLists.txt
@@ -45,8 +45,14 @@ ze_add_source(ZEInputDefinitions.cpp					Sources)
 ze_add_source(ZEInputDefinitions.h						Sources Headers)
 ze_add_source(ZEInputDevice.cpp							Sources)
 ze_add_source(ZEInputDevice.h							Sources Headers)
-ze_add_source(ZEInputDeviceExtension.cpp				Sources)
-ze_add_source(ZEInputDeviceExtension.h					Sources Headers ZEMC)
+ze_add_source(ZEInputDeviceDescription.cpp				Sources)
+ze_add_source(ZEInputDeviceDescription.h				Sources Headers)
+ze_add_source(ZEInputDeviceState.cpp					Sources)
+ze_add_source(ZEInputDeviceState.h						Sources Headers)
+ze_add_source(ZEInputDeviceModule.cpp					Sources)
+ze_add_source(ZEInputDeviceModule.h						Sources Headers ZEMC)
+ze_add_source(ZEInputDeviceIndexes.cpp					Sources)
+ze_add_source(ZEInputDeviceIndexes.h					Sources Headers)
 ze_add_source(ZEInputModule.cpp							Sources)
 ze_add_source(ZEInputModule.h							Sources Headers ZEMC)
 
