ADD: Color only UI control support has been added. ADD: Multi selection support has been added to ZEDSelectionManager. MOD: InverseTransform functions has been optimized. FIX: ZEDSHShaderEditor linker problems have been fixed.
svn path=/trunk/; revision=2183

--- a/Source/ZETools/ZEDSHShaderEditor/CMakeLists.txt
+++ b/Source/ZETools/ZEDSHShaderEditor/CMakeLists.txt
@@ -60,7 +60,7 @@ source_group("Generated" FILES ${QtMocFiles} ${QtUIFiles})
 
 ze_add_executable(TARGET ZEDSHShaderEditor
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles}
-	LIBS ZEFoundation ZEGraphics ZEDirect3D11 Qt5::WinMain)
+	LIBS ZEFoundation ZEEngine ZEDirect3D11 Qt5::WinMain)
 
 qt5_use_modules(ZEDSHShaderEditor Widgets)
 
