MOD: ZEEvent system has been revised. FIX: Many bugs have been fixed around ZEEvent system. MOD: ZEEventHandler has been renamed to ZEEventDelegate and reimplemented. MOD: ZEDelegate methods have been moved to out size of the ZEDelegate class. FIX: Minor problems around ZEEvent has been fixed in ZEMetaCompiler. MOD: Precompiled ZEMetaCompiler.exe has been updated.
svn path=/trunk/; revision=2188

--- a/Source/ZEFoundation/ZEMeta/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMeta/CMakeLists.txt
@@ -63,12 +63,12 @@ ze_add_source(ZEContainer.cpp					Sources)
 ze_add_source(ZEContainer.h						Sources Headers)
 ze_add_source(ZEEnumerator.cpp					Sources)
 ze_add_source(ZEEnumerator.h					Sources Headers)
+ze_add_source(ZEEventDelegate.cpp				Sources)
+ze_add_source(ZEEventDelegate.h					Sources Headers)
+ze_add_source(ZEEventDelegateImp.h				Sources Headers)
 ze_add_source(ZEEvent.cpp						Sources)
 ze_add_source(ZEEvent.h							Sources Headers)
 ze_add_source(ZEEventImp.h						Sources Headers)
-ze_add_source(ZEEventHandler.cpp				Sources)
-ze_add_source(ZEEventHandler.h					Sources Headers)
-ze_add_source(ZEEventHandlerImp.h				Sources Headers)
 ze_add_source(ZEProvider.cpp					Sources)
 ze_add_source(ZEProvider.h						Sources Headers)
 ze_add_source(ZEType.cpp						Sources)
