REM: Old ZEDEditor menu system has been removed. CHG: ZEDMenu2 has been renamed to ZEDMenu. FIX: Many ZEDMenuManager::Load related problems and bugs has been fixed. ADD: New ZEDCommand(s) have been added to ZEDSelectionManager. ADD: New ZEDCommand(s) have been added to ZEDEditor. ADD: Menu configuration file Menu.ZEDMenuManager has been added.
svn path=/trunk/; revision=2196

--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -45,9 +45,7 @@ ze_add_source(ZEDUserInterfaceComponent.h				Sources ZEMC QtMocs)
 ze_add_source(ZEDWindow.cpp								Sources)
 ze_add_source(ZEDWindow.h								Sources ZEMC QtMocs)
 ze_add_source(ZEDMenu.cpp								Sources)
-ze_add_source(ZEDMenu.h									Sources QtMocs)
-ze_add_source(ZEDMenu2.cpp								Sources)
-ze_add_source(ZEDMenu2.h								Sources ZEMC QtMocs)
+ze_add_source(ZEDMenu.h									Sources ZEMC QtMocs)
 ze_add_source(ZEDMenuItem.cpp							Sources)
 ze_add_source(ZEDMenuItem.h								Sources ZEMC QtMocs)
 ze_add_source(ZEDMenuManager.cpp						Sources)
