ADD: New ZEDCommand based toolbar system has been introduced. REM: Old ZEDToolbar system has been removed.
svn path=/trunk/; revision=2197

--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -45,26 +45,22 @@ ze_add_source(ZEDUserInterfaceComponent.h				Sources ZEMC QtMocs)
 ze_add_source(ZEDWindow.cpp								Sources)
 ze_add_source(ZEDWindow.h								Sources ZEMC QtMocs)
 ze_add_source(ZEDMenu.cpp								Sources)
-ze_add_source(ZEDMenu.h									Sources ZEMC QtMocs)
+ze_add_source(ZEDMenu.h									Sources ZEMC)
 ze_add_source(ZEDMenuItem.cpp							Sources)
 ze_add_source(ZEDMenuItem.h								Sources ZEMC QtMocs)
 ze_add_source(ZEDMenuManager.cpp						Sources)
 ze_add_source(ZEDMenuManager.h							Sources ZEMC)
 ze_add_source(ZEDToolbar.cpp							Sources)
 ze_add_source(ZEDToolbar.h								Sources ZEMC)
+ze_add_source(ZEDToolbarItem.cpp						Sources)
+ze_add_source(ZEDToolbarItem.h							Sources ZEMC QtMocs)
+ze_add_source(ZEDToolbarManager.cpp						Sources)
+ze_add_source(ZEDToolbarManager.h						Sources ZEMC)
 ze_add_source(ZEDMainWindow.cpp							Sources)
 ze_add_source(ZEDMainWindow.h							Sources QtMocs)
 ze_add_source(ZEDMainWindow.ui							Sources QtUI)
 ze_add_source(ZEDUIUtils.cpp							Sources)
 ze_add_source(ZEDUIUtils.h								Sources)
-
-# Common Controls
-ze_add_source(ZEDTransformationToolbar.cpp				Sources)
-ze_add_source(ZEDTransformationToolbar.h				Sources QtMocs)
-ze_add_source(ZEDSelectionToolbar.cpp					Sources)
-ze_add_source(ZEDSelectionToolbar.h						Sources QtMocs)
-ze_add_source(ZEDViewportToolbar.cpp					Sources)
-ze_add_source(ZEDViewportToolbar.h						Sources QtMocs)
 
 ze_add_source(ZEDObjectTree.cpp							Sources)
 ze_add_source(ZEDObjectTree.h							Sources QtMocs)
