ADD: ZEDCustomizeUIWindow, which is used for customizing menus and toolbars, has been added.
svn path=/trunk/; revision=2198

--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -59,6 +59,9 @@ ze_add_source(ZEDToolbarManager.h						Sources ZEMC)
 ze_add_source(ZEDMainWindow.cpp							Sources)
 ze_add_source(ZEDMainWindow.h							Sources QtMocs)
 ze_add_source(ZEDMainWindow.ui							Sources QtUI)
+ze_add_source(ZEDCustomizeUIWindow.cpp					Sources)
+ze_add_source(ZEDCustomizeUIWindow.h					Sources QtMocs)
+ze_add_source(ZEDCustomizeUIWindow.ui					Sources QtUI)
 ze_add_source(ZEDUIUtils.cpp							Sources)
 ze_add_source(ZEDUIUtils.h								Sources)
 
