ADD: Hierarchy aware ZECloneOperation has been added. MOD: ZEDDeleteOperation has been modified to became hierarchy aware. FIX: Many bugs and problems have been fixed ZEDDeleteOperation. FIX: Unintended world transform change after ZEDRelocateOperation has been fixed. FIX: Memory corruption around ZEDOperationManager::Stack has been fixed.
svn path=/trunk/; revision=2206

--- a/Source/ZEDEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDCore/CMakeLists.txt
@@ -64,6 +64,8 @@ ze_add_source(ZEDDeleteOperation.cpp					Sources)
 ze_add_source(ZEDDeleteOperation.h						Sources ZEMC)
 ze_add_source(ZEDRelocateOperation.cpp					Sources)
 ze_add_source(ZEDRelocateOperation.h					Sources ZEMC)
+ze_add_source(ZEDCloneOperation.cpp						Sources)
+ze_add_source(ZEDCloneOperation.h						Sources ZEMC)
 ze_add_source(ZEDPropertyOperation.cpp					Sources)
 ze_add_source(ZEDPropertyOperation.h					Sources ZEMC)
 
