MOD: ZE_REF_NO_SUBMATCH_STRING flag, which is used for enable sub match string, has been added to ZERegEx. ADD: Initial version of the ZEDAsset system has been added to ZEDEditor. <STILL IN DEVELOPMENT>
svn path=/trunk/; revision=2216

--- a/Source/ZEDEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDCore/CMakeLists.txt
@@ -90,6 +90,13 @@ ze_add_source(ZEDViewportManager.h						Sources ZEMC)
 ze_add_source(ZEDViewportController.cpp					Sources)
 ze_add_source(ZEDViewportController.h					Sources ZEMC)
 
+ze_add_source(ZEDAsset.cpp								Sources)
+ze_add_source(ZEDAsset.h								Sources ZEMC)
+ze_add_source(ZEDAssetType.cpp							Sources)
+ze_add_source(ZEDAssetType.h							Sources ZEMC)
+ze_add_source(ZEDAssetManager.cpp						Sources)
+ze_add_source(ZEDAssetManager.h							Sources ZEMC)
+
 ze_add_source(ZEDGizmo.cpp								Sources)
 ze_add_source(ZEDGizmo.h								Sources ZEMC)
 ze_add_source(ZEDGrid.cpp								Sources)
