ADD: ZEDClassModel, QAbstractItemModel based model, has been implemented for ZEClass(es). REM: ZEDClassTree has been removed in favor of model based ZEDClassModel. MOD: ZEDClassBrowser has been modified to use ZEDClassModel.
svn path=/trunk/; revision=2217

--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -79,8 +79,8 @@ ze_add_source(ZEDAssetBrowser.cpp						Sources)
 ze_add_source(ZEDAssetBrowser.h							Sources QtMocs)
 ze_add_source(ZEDAssetBrowser.ui						Sources QtUI)
 
-ze_add_source(ZEDClassTree.cpp							Sources)
-ze_add_source(ZEDClassTree.h							Sources QtMocs)
+ze_add_source(ZEDClassModel.cpp							Sources)
+ze_add_source(ZEDClassModel.h							Sources)
 ze_add_source(ZEDClassBrowser.cpp						Sources)
 ze_add_source(ZEDClassBrowser.h							Sources QtMocs)
 ze_add_source(ZEDClassBrowser.ui						Sources QtUI)
