FIX: Death-Lock in ZEDAssetManager has been fixed. ADD: ZEDObjectModel has been added. REM: ZEDObjectTree has been removed in favor of ZEDObjectModel. FIX: Many fixes and fortifications have been made on ZEDClassModel. FIX: Minor fixes and improvements have been made on ZEDClassBrowser. MOD: ZEDObjectBrowser has been modified to use ZEDObjectModel and regular QTreeView instead ZEDObjectTree. MOD: ZEWildcard has been moved to it's own source and header file. ADD: ZED_OET_ADDING and ZED_OET_REMOVING ZEDObjecTEvent types have been added.
svn path=/trunk/; revision=2219

--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -65,10 +65,10 @@ ze_add_source(ZEDCustomizeUIWindow.ui					Sources QtUI)
 ze_add_source(ZEDUIUtils.cpp							Sources)
 ze_add_source(ZEDUIUtils.h								Sources)
 
-ze_add_source(ZEDObjectTree.cpp							Sources)
-ze_add_source(ZEDObjectTree.h							Sources QtMocs)
-ze_add_source(ZEDObjectTreeColumn.cpp					Sources)
-ze_add_source(ZEDObjectTreeColumn.h						Sources)
+ze_add_source(ZEDObjectModel.cpp						Sources)
+ze_add_source(ZEDObjectModel.h							Sources)
+ze_add_source(ZEDObjectModelColumn.cpp					Sources)
+ze_add_source(ZEDObjectModelColumn.h					Sources)
 ze_add_source(ZEDObjectBrowser.cpp						Sources)
 ze_add_source(ZEDObjectBrowser.h						Sources QtMocs)
 ze_add_source(ZEDObjectBrowser.ui						Sources QtUI)
