--- a/Source/ZEFoundation/ZERegEx/CMakeLists.txt
+++ b/Source/ZEFoundation/ZERegEx/CMakeLists.txt
@@ -39,6 +39,8 @@ add_subdirectory(TRE)
 
 ze_add_source(ZERegEx.h 			Sources Headers)
 ze_add_source(ZERegEx.cpp 			Sources)
+ze_add_source(ZEWildcard.h 			Sources Headers)
+ze_add_source(ZEWildcard.cpp 		Sources)
 
 ze_add_library(TARGET ZERegEx 
 	SOURCES ${Sources} 
