--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -69,6 +69,8 @@ ze_add_source(ZEDObjectModel.cpp						Sources)
 ze_add_source(ZEDObjectModel.h							Sources)
 ze_add_source(ZEDObjectModelColumn.cpp					Sources)
 ze_add_source(ZEDObjectModelColumn.h					Sources)
+ze_add_source(ZEDObjectSelectionModel.cpp				Sources)
+ze_add_source(ZEDObjectSelectionModel.h					Sources QtMocs)
 ze_add_source(ZEDObjectBrowser.cpp						Sources)
 ze_add_source(ZEDObjectBrowser.h						Sources QtMocs)
 ze_add_source(ZEDObjectBrowser.ui						Sources QtUI)
