MOD: Massive modifications has been made on ZEDAsset, ZEDAssetManager and ZEDAssetType. ADD: ZEDAssetCategory, ZEDAssetDirectory and ZEDAssetEvent facilities have been added. ADD: ZEDAssetModel, capable of searching, column customization and tree structure viewing, has been added with limited functionality. (Category hierarchy and list mode is missing) MOD: ZEDAssetBrowser has been modified to use ZEDAssetModel instead of ZEDAssetTree. REM: ZEDAssetTree has been removed in favor of ZEDAssetModel. ADD: ZEPathInfo::IsParentOf, ZEPathInfo::IsChildOf and ZEPathInfo::NormalizeSelf functions have been added. FIX: Minor fixes and improvements have been made on ZEDObjectBrowser and ZEDObjectModel.
svn path=/trunk/; revision=2221

--- a/Source/ZEDEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDCore/CMakeLists.txt
@@ -94,6 +94,12 @@ ze_add_source(ZEDAsset.cpp								Sources)
 ze_add_source(ZEDAsset.h								Sources ZEMC)
 ze_add_source(ZEDAssetType.cpp							Sources)
 ze_add_source(ZEDAssetType.h							Sources ZEMC)
+ze_add_source(ZEDAssetDirectory.cpp						Sources)
+ze_add_source(ZEDAssetDirectory.h						Sources ZEMC)
+ze_add_source(ZEDAssetCategory.cpp						Sources)
+ze_add_source(ZEDAssetCategory.h						Sources ZEMC)
+ze_add_source(ZEDAssetEvent.cpp							Sources)
+ze_add_source(ZEDAssetEvent.h							Sources ZEMC)
 ze_add_source(ZEDAssetManager.cpp						Sources)
 ze_add_source(ZEDAssetManager.h							Sources ZEMC)
 
