--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -75,8 +75,10 @@ ze_add_source(ZEDObjectBrowser.cpp						Sources)
 ze_add_source(ZEDObjectBrowser.h						Sources QtMocs)
 ze_add_source(ZEDObjectBrowser.ui						Sources QtUI)
 
-ze_add_source(ZEDAssetTree.cpp							Sources)
-ze_add_source(ZEDAssetTree.h							Sources QtMocs)
+ze_add_source(ZEDAssetModel.cpp							Sources)
+ze_add_source(ZEDAssetModel.h							Sources)
+ze_add_source(ZEDAssetModelColumn.cpp					Sources)
+ze_add_source(ZEDAssetModelColumn.h						Sources)
 ze_add_source(ZEDAssetBrowser.cpp						Sources)
 ze_add_source(ZEDAssetBrowser.h							Sources QtMocs)
 ze_add_source(ZEDAssetBrowser.ui						Sources QtUI)
