CHG: ZEDSceneEditor has been renamed to ZEDEntityEditor. All base ZEEntity editing capabilities will be implemented in here. ADD: ZEDAssetMeta, which is used for storing meta information of the asset, has been added. ADD: ZEDAssetDependency, which is used for listing inter dependencies of assets, has been added. MOD: Massive changes and improvements has been made on ZEDAsset and ZEDAssetType. MOD: Filtering mechanisms in ZEDAssertModel, ZEDObjectModel and ZEDClassMode have been unified and improved. ADD: Tree and List mode switch button has been added to all ZEDXXXXBrowser widgets. ADD: New asset types classes have been introduces. (Most of them are empty right now)
svn path=/trunk/; revision=2226

--- a/Source/ZEDEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDCore/CMakeLists.txt
@@ -92,10 +92,14 @@ ze_add_source(ZEDViewportController.h					Sources ZEMC)
 
 ze_add_source(ZEDAsset.cpp								Sources)
 ze_add_source(ZEDAsset.h								Sources ZEMC)
+ze_add_source(ZEDAssetMeta.cpp							Sources)
+ze_add_source(ZEDAssetMeta.h							Sources ZEMC)
 ze_add_source(ZEDAssetType.cpp							Sources)
 ze_add_source(ZEDAssetType.h							Sources ZEMC)
 ze_add_source(ZEDAssetDirectory.cpp						Sources)
 ze_add_source(ZEDAssetDirectory.h						Sources ZEMC)
+ze_add_source(ZEDAssetDependency.cpp					Sources)
+ze_add_source(ZEDAssetDependency.h						Sources ZEMC)
 ze_add_source(ZEDAssetCategory.cpp						Sources)
 ze_add_source(ZEDAssetCategory.h						Sources ZEMC)
 ze_add_source(ZEDAssetEvent.cpp							Sources)
