--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -36,86 +36,89 @@
 cmake_minimum_required(VERSION 2.8)
 
 ze_add_source(ZEDCommand.cpp							Sources)
-ze_add_source(ZEDCommand.h								Sources ZEMC QtMocs)
+ze_add_source(ZEDCommand.h								Sources ZEMC QtMOCs)
 ze_add_source(ZEDCommandManager.cpp						Sources)
-ze_add_source(ZEDCommandManager.h						Sources ZEMC QtMocs)
+ze_add_source(ZEDCommandManager.h						Sources ZEMC QtMOCs)
 
 ze_add_source(ZEDUserInterfaceComponent.cpp				Sources)
-ze_add_source(ZEDUserInterfaceComponent.h				Sources ZEMC QtMocs)
+ze_add_source(ZEDUserInterfaceComponent.h				Sources ZEMC QtMOCs)
 ze_add_source(ZEDWindow.cpp								Sources)
-ze_add_source(ZEDWindow.h								Sources ZEMC QtMocs)
+ze_add_source(ZEDWindow.h								Sources ZEMC QtMOCs)
 ze_add_source(ZEDMenu.cpp								Sources)
 ze_add_source(ZEDMenu.h									Sources ZEMC)
 ze_add_source(ZEDMenuItem.cpp							Sources)
-ze_add_source(ZEDMenuItem.h								Sources ZEMC QtMocs)
+ze_add_source(ZEDMenuItem.h								Sources ZEMC QtMOCs)
 ze_add_source(ZEDMenuManager.cpp						Sources)
 ze_add_source(ZEDMenuManager.h							Sources ZEMC)
 ze_add_source(ZEDToolbar.cpp							Sources)
 ze_add_source(ZEDToolbar.h								Sources ZEMC)
 ze_add_source(ZEDToolbarItem.cpp						Sources)
-ze_add_source(ZEDToolbarItem.h							Sources ZEMC QtMocs)
+ze_add_source(ZEDToolbarItem.h							Sources ZEMC QtMOCs)
 ze_add_source(ZEDToolbarManager.cpp						Sources)
 ze_add_source(ZEDToolbarManager.h						Sources ZEMC)
 ze_add_source(ZEDMainWindow.cpp							Sources)
-ze_add_source(ZEDMainWindow.h							Sources QtMocs)
-ze_add_source(ZEDMainWindow.ui							Sources QtUI)
+ze_add_source(ZEDMainWindow.h							Sources QtMOCs)
+ze_add_source(ZEDMainWindow.ui							Sources QtUIs)
 ze_add_source(ZEDCustomizeUIWindow.cpp					Sources)
-ze_add_source(ZEDCustomizeUIWindow.h					Sources QtMocs)
-ze_add_source(ZEDCustomizeUIWindow.ui					Sources QtUI)
+ze_add_source(ZEDCustomizeUIWindow.h					Sources QtMOCs)
+ze_add_source(ZEDCustomizeUIWindow.ui					Sources QtUIs)
 ze_add_source(ZEDUIUtils.cpp							Sources)
 ze_add_source(ZEDUIUtils.h								Sources)
 
 ze_add_source(ZEDObjectModel.cpp						Sources)
-ze_add_source(ZEDObjectModel.h							Sources)
+ze_add_source(ZEDObjectModel.h							Sources ZEMC)
 ze_add_source(ZEDObjectModelColumn.cpp					Sources)
 ze_add_source(ZEDObjectModelColumn.h					Sources)
 ze_add_source(ZEDObjectSelectionModel.cpp				Sources)
-ze_add_source(ZEDObjectSelectionModel.h					Sources QtMocs)
+ze_add_source(ZEDObjectSelectionModel.h					Sources QtMOCs)
 ze_add_source(ZEDObjectBrowser.cpp						Sources)
-ze_add_source(ZEDObjectBrowser.h						Sources QtMocs)
-ze_add_source(ZEDObjectBrowser.ui						Sources QtUI)
+ze_add_source(ZEDObjectBrowser.h						Sources QtMOCs)
+ze_add_source(ZEDObjectBrowser.ui						Sources QtUIs)
 
 ze_add_source(ZEDAssetModel.cpp							Sources)
-ze_add_source(ZEDAssetModel.h							Sources)
+ze_add_source(ZEDAssetModel.h							Sources ZEMC)
 ze_add_source(ZEDAssetModelColumn.cpp					Sources)
 ze_add_source(ZEDAssetModelColumn.h						Sources)
 ze_add_source(ZEDAssetBrowser.cpp						Sources)
-ze_add_source(ZEDAssetBrowser.h							Sources QtMocs)
-ze_add_source(ZEDAssetBrowser.ui						Sources QtUI)
+ze_add_source(ZEDAssetBrowser.h							Sources QtMOCs)
+ze_add_source(ZEDAssetBrowser.ui						Sources QtUIs)
 
 ze_add_source(ZEDClassModel.cpp							Sources)
-ze_add_source(ZEDClassModel.h							Sources)
+ze_add_source(ZEDClassModel.h							Sources ZEMC)
 ze_add_source(ZEDClassBrowser.cpp						Sources)
-ze_add_source(ZEDClassBrowser.h							Sources QtMocs)
-ze_add_source(ZEDClassBrowser.ui						Sources QtUI)
+ze_add_source(ZEDClassBrowser.h							Sources QtMOCs)
+ze_add_source(ZEDClassBrowser.ui						Sources QtUIs)
 
 ze_add_source(ZEDPropertyEditor.cpp						Sources)
-ze_add_source(ZEDPropertyEditor.h						Sources Headers QtMocs)
+ze_add_source(ZEDPropertyEditor.h						Sources Headers QtMOCs)
 ze_add_source(ZEDPropertyEditorItem.cpp					Sources)
 ze_add_source(ZEDPropertyEditorItem.h					Sources Headers)
 ze_add_source(ZEDPropertyEditorItemNumeric.cpp			Sources)
-ze_add_source(ZEDPropertyEditorItemNumeric.h			Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemNumeric.h			Sources QtMOCs)
 ze_add_source(ZEDPropertyEditorItemBoolean.cpp			Sources)
-ze_add_source(ZEDPropertyEditorItemBoolean.h			Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemBoolean.h			Sources QtMOCs)
 ze_add_source(ZEDPropertyEditorItemString.cpp			Sources)
-ze_add_source(ZEDPropertyEditorItemString.h				Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemString.h				Sources QtMOCs)
 ze_add_source(ZEDPropertyEditorItemEnumurator.cpp		Sources)
-ze_add_source(ZEDPropertyEditorItemEnumurator.h			Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemEnumurator.h			Sources QtMOCs)
 ze_add_source(ZEDPropertyEditorItemVector.cpp			Sources)
-ze_add_source(ZEDPropertyEditorItemVector.h				Sources QtMocs)
+ze_add_source(ZEDPropertyEditorItemVector.h				Sources QtMOCs)
 ze_add_source(ZEDPropertyWindow.cpp						Sources)
-ze_add_source(ZEDPropertyWindow.h						Sources Headers QtMocs)
+ze_add_source(ZEDPropertyWindow.h						Sources Headers QtMOCs)
 
-qt5_wrap_cpp (QtMocFiles ${QtMocs})
-qt5_wrap_ui (QtUIFiles ${QtUI})
+ze_add_source(ZEDCommon.qrc								Sources QtResources)
+
+qt5_wrap_cpp(QtMOCOutputs ${QtMOCs})
+qt5_wrap_ui(QtUIOutputs ${QtUIs})
+qt5_add_resources(QtResouceOutputs ${QtResources})
 
 include_directories(${Qt5Widgets_INCLUDE_DIRS})
 
 ze_add_library(TARGET ZEDUserInterface
-	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} 
+	SOURCES ${Sources} ${QtMOCOutputs} ${QtUIOutputs} ${QtResouceOutputs}
 	ZEMC ${ZEMC}
 	LIBS ZEFoundation ZEDCore)
 
 qt5_use_modules(ZEDUserInterface Widgets)
 
-source_group("Generated" FILES ${QtMocFiles} ${QtUIFiles})
+source_group("Generated" FILES ${QtMOCOutputs} ${QtUIOutputs} ${QtResouceOutputs})
