CHG: ZEDObjectWrapper has been divided into ZEDObjectWrapper and ZEDObjectWrapper3D. CHG: All positional properties and drawing mechanisms of ZEDObjectWrapper and ZEDEntityWrapper have been moved to ZEDObjectWrapper3D. CHG: ZEDSelectionManager, ZEDObjectManager, ZEDTransformationManager have been updated according to new ZEDObjectWrapper changes. CHG: ZEDEditor.ZEDObjectWrapper class attributes have been revised. ADD: ZERNMultiplexerMaterial, which is used for multiplexing multiple material into single one, has been added. ADD: ZERNMaterial::LoadResource and ZERNMaterial::LoadResourceShared functions, which automatically determines material class and load the file accordingly, have been added. FIX: Version properties in ZECVMaterialConverterV2 and ZECVModelConverterV2 have been fixed. (MajorVersion -> VersionMajor and MinorVersion -> VersionMinor) FIX: ZEMLWriter allows format change after file is opened problem has been fixed.
svn path=/trunk/; revision=2231

--- a/Source/ZEDEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDCore/CMakeLists.txt
@@ -53,6 +53,8 @@ ze_add_source(ZEDOperationManager.h						Sources ZEMC)
 
 ze_add_source(ZEDObjectWrapper.cpp						Sources)
 ze_add_source(ZEDObjectWrapper.h						Sources ZEMC)
+ze_add_source(ZEDObjectWrapper3D.cpp					Sources)
+ze_add_source(ZEDObjectWrapper3D.h						Sources ZEMC)
 ze_add_source(ZEDObjectEvent.cpp						Sources)
 ze_add_source(ZEDObjectEvent.h							Sources ZEMC)
 ze_add_source(ZEDObjectManager.cpp						Sources)
@@ -89,6 +91,8 @@ ze_add_source(ZEDViewportManager.cpp					Sources)
 ze_add_source(ZEDViewportManager.h						Sources ZEMC)
 ze_add_source(ZEDViewportController.cpp					Sources)
 ze_add_source(ZEDViewportController.h					Sources ZEMC)
+ze_add_source(ZEDViewportSelectionController.cpp		Sources)
+ze_add_source(ZEDViewportSelectionController.h			Sources ZEMC)
 
 ze_add_source(ZEDAsset.cpp								Sources)
 ze_add_source(ZEDAsset.h								Sources ZEMC)
