--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -74,53 +74,55 @@ ze_add_source(ZERNStandardMaterial.cpp 				Sources)
 ze_add_source(ZERNStandardMaterial.h 				Sources Headers ZEMC)
 ze_add_source(ZERNParticleMaterial.cpp 				Sources)
 ze_add_source(ZERNParticleMaterial.h 				Sources Headers ZEMC)
+ze_add_source(ZERNMultiplexerMaterial.cpp			Sources)
+ze_add_source(ZERNMultiplexerMaterial.h				Sources Headers ZEMC)
 
-ze_add_source(ZERNStage.h 							Sources Headers ZEMC)
 ze_add_source(ZERNStage.cpp 						Sources)
-ze_add_source(ZERNStageID.h 						Sources Headers ZEMC)
+ze_add_source(ZERNStage.h 							Sources Headers ZEMC)
 ze_add_source(ZERNStageID.cpp 						Sources)
-ze_add_source(ZERNStageManager.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStageID.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageManager.cpp 					Sources)
-ze_add_source(ZERNStageInputTexture.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageManager.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageInputTexture.cpp				Sources)
-ze_add_source(ZERNStageOutput.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStageInputTexture.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStageOutput.cpp					Sources)
-ze_add_source(ZERNStageOutputTexture.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageOutput.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageOutputTexture.cpp			Sources)
-ze_add_source(ZERNStageGBuffer.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStageOutputTexture.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStageGBuffer.cpp 					Sources)
-ze_add_source(ZERNStageAO.h 						Sources Headers ZEMC)
+ze_add_source(ZERNStageGBuffer.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageAO.cpp 						Sources)
-ze_add_source(ZERNStageLighting.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStageAO.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageLighting.cpp					Sources)
-ze_add_source(ZERNStageHDR.h 						Sources Headers ZEMC)
+ze_add_source(ZERNStageLighting.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageHDR.cpp 						Sources)
-ze_add_source(ZERNStageForward.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStageHDR.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageForward.cpp 					Sources)
-ze_add_source(ZERNStageMultiplexer.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageForward.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageMultiplexer.cpp				Sources)
-ze_add_source(ZERNStageDisplay.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStageMultiplexer.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStageDisplay.cpp					Sources)
-ze_add_source(ZERNStagePostProcess.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageDisplay.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStagePostProcess.cpp				Sources)
-ze_add_source(ZERNStageShadowmapGeneration.h		Sources Headers ZEMC)
+ze_add_source(ZERNStagePostProcess.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStageShadowmapGeneration.cpp		Sources)
-ze_add_source(ZERNStageShadowing.h					Sources Headers ZEMC)
+ze_add_source(ZERNStageShadowmapGeneration.h		Sources Headers ZEMC)
 ze_add_source(ZERNStageShadowing.cpp				Sources)
-ze_add_source(ZERNStageParticleRendering.h			Sources Headers ZEMC)
+ze_add_source(ZERNStageShadowing.h					Sources Headers ZEMC)
 ze_add_source(ZERNStageParticleRendering.cpp		Sources)
-ze_add_source(ZERNStageAntiAliasing.h				Sources Headers ZEMC)
+ze_add_source(ZERNStageParticleRendering.h			Sources Headers ZEMC)
 ze_add_source(ZERNStageAntiAliasing.cpp				Sources)
-ze_add_source(ZERNStageDebug.h 						Sources Headers ZEMC)
+ze_add_source(ZERNStageAntiAliasing.h				Sources Headers ZEMC)
 ze_add_source(ZERNStageDebug.cpp					Sources)
-ze_add_source(ZERNStage2D.h 						Sources Headers ZEMC)
+ze_add_source(ZERNStageDebug.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStage2D.cpp						Sources)
-ze_add_source(ZERNStageResolving.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStage2D.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageResolving.cpp				Sources)
-ze_add_source(ZERNStageRenderDepth.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageResolving.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageRenderDepth.cpp				Sources)
-ze_add_source(ZERNStageAtmosphere.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageRenderDepth.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStageAtmosphere.cpp				Sources)
+ze_add_source(ZERNStageAtmosphere.h 				Sources Headers ZEMC)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
