--- a/Source/ZETools/CMakeLists.txt
+++ b/Source/ZETools/CMakeLists.txt
@@ -51,5 +51,6 @@ ze_add_module(ZETerrainExporter)
 ze_add_module(ZELCLicenseTool)
 ze_add_module(ZEITIntegrityTool)
 ze_add_module(ZEDSHShaderEditor)
+#ze_add_module(ZESourceProcessor)
 
 ze_add_cmake_project(ZETools)
