MOD: CustHCombat is migrated into new ZEEntity and ZEResource system. FIX: Many fixes and improvements have been made on ZEGRWindow cursor management functions. FIX: Many fixes and improvements have been made on ZESoundResource and ZESoundSource. FIX: ZEInterior rendering problems have been fixed.
svn path=/trunk/; revision=2233

--- a/Source/ZEDEditor/CMakeLists.txt
+++ b/Source/ZEDEditor/CMakeLists.txt
@@ -51,8 +51,8 @@ ze_add_source(ZEDMain.cpp		Sources)
 
 ze_add_executable(TARGET ZEDEditor 
 	SOURCES ${Sources}
-	LIBS ZEEngine ZEDEntityEditor ZETrainIGModule)
+	LIBS ZEEngine ZEDEntityEditor ZETrainIGModule HavalsanCombatModule)
 
 qt5_use_modules(ZEDEditor Widgets)
 
-ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDSceneEditor ZETrainIGModule)
+ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDSceneEditor ZETrainIGModule HavalsanCombatModule)
